Changelog
---------

### Next version
* __Read PDB files from stdin with "-f -" and write to stdout with "-O" (capital "O")__
* Improves handling of fixed PDB files
* Option to turn off writing fixed PDB structures to a file ("--nofixfile")

### 1.3.5
* Preparation for Python 3: Imports
* small correction for PDB fixing
* includes TODO files with user suggestions
* license adapted to GNU GPLv2

### 1.3.4
* __DNA/RNA can be selected as receptor with --dnareceptor__
* __Composite ligands and intra-protein mode: Annotation which part of the ligand interacts with the receptor__
* Improved handling of NMR structures
* Filter for extremely large ligands
* Speed-up for file reading and parallel visualization
* More debugging messages

### 1.3.3
* __Adds XML Parser module for PLIP XML files__
* Detection of intramolecular interactions with --intra
* improved error correction in PDB files

### 1.3.2
* __Processing of protein-peptide interactions via --peptides__
* option to keep modified residues as ligands (--keepmod)
* Improved code for reports
* Smart ordering of ligand in composite compounds
* Fixes handling and visualization of DNA/RNA

### 1.3.1
* __Support for amino acids as ligands__
* __Plugin-ready for PyMOL and Chimera__
* Refactores code and optimized input
* Improved verbose and debug log system
* Bugfixes for problems affecting some structures with aromatic rings

### 1.3.0
* __Batch processing__
* Improvements to verbose mode and textual output

### 1.2.3
* __Better support for files from MD and docking software__
* __Fixes issues with large and complex structures__
* Speed optimizations


### 1.2.2
* __Option to consider alternate atom locations (e.g. for ligands with several conformations__
* Automatic fixing of missing ligand names
* Improved handling of broken PDB files and non-standard filenames
* Improved error handling

### 1.2.1
* __Mapping of canonical atom order to PDB atom order for each ligand__
* __Introduction of debug mode (--debug)__